[package]
name = "hello_Rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
ethereum-types = "0.14.1"
hex = "0.4.3"
ethereum-private-key-to-address = "0.1.0"
dialoguer = {version = "0.10.4", features = ["fuzzy-select"]}
cargo-files = "0.2.0"
rand = "0.8.5"
ethers = "2.0.10"
serde = "1.0.192"
serde_json = "1.0.108"



